Update coins stats

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     <p>
                         The entire supply of each token is locked in a Uniswap Liquidity Pool and all corresponding LP tokens are burned forever. No allocation to billionaire investors or special treatment for founders. Everyone buys from decentralized exchanges which means a fair launch with no risk for rug pulls and bad actors.
                         <br />
-                        <a href="https://etherscan.io/address/0x8e0f59c46e1d5934c5793cab44a045d1ff55c7a2#tokentxns">View LP token burns on Etherscan</a>
+                        <a href="https://etherscan.io/address/0x8e0f59c46e1d5934c5793cab44a045d1ff55c7a2#tokentxns" target="_blank">View LP token burns on Etherscan</a>
                     </p>
                 </div>
             </div>
@@ -755,9 +755,9 @@
         // p: Percentage
     var comparison = [
         {m: 10, c: 3800, p: 100},
-        {m: 1, c: 3500, p: 63},
-        {m: 7, c: 3350, p: 44},
-        {m: 4, c: 3200, p: 25},
+        {m: 1, c: 3500, p: 92},
+        {m: 7, c: 3350, p: 88},
+        {m: 4, c: 3200, p: 84},
         {m: 2, c: -1, p: -1},
         {m: 3, c: -1, p: -1},
         {m: 5, c: -1, p: -1},
